# codex-auth

./: .gitignore  AGENTS.md  README.md  build.zig  fallback.md  package.json  style.md
.github/workflows/: ci.yml  preview-release.yml  release.yml
desktop/: main.js  package-lock.json  package.json  preload.cjs
desktop-tauri/: .gitignore  package-lock.json  package.json
desktop-tauri/renderer/: app.js  i18n.js  index.html  style.css  (+1 more)
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.visual.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/icons/: icon.icns
desktop-tauri/src-tauri/src/: lib.rs  main.rs  network.rs  oauth.rs  registry.rs
docs/: api-provider-login-plan.md  api.md  auto-switch.md  desktop-development.md  desktop-packaging-quickstart.md  desktop-release.md  implement.md  release.md  schema-migration.md  share-links.md  tauri-migration.md  telemetry.md  windows.md
scripts/: create-apiz-share-links.mjs  create-apiz-share-links.test.mjs
site/: downloads.js  index.html  share-api.integration.test.js  share-api.js  share-api.test.js  styles.css  worker.js  wrangler.json
src/: main.zig  root.zig  session.zig  version.zig
telemetry/: worker.js  worker.test.mjs  wrangler.json
tests/: api_account_test.zig  api_http_test.zig  auto_daemon_test.zig  cli_behavior_test.zig  cli_integration_test.zig  cli_picker_test.zig  fake_codex.zig  fake_curl.zig  provider_toml_test.zig  registry_test.zig  table_layout_test.zig  tui_display_test.zig  tui_table_test.zig  workflows_core_test.zig  workflows_live_test.zig
(+115 files in other folders)
