[package]
name = "codex-auth-desktop-tauri"
version = "0.2.3"
description = "Tauri desktop account manager for Codex"
authors = ["codex-auth contributors"]
edition = "2021"

[lib]
name = "codex_auth_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures = "0.3"
notify = "8"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
